--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 h3 {
-	font-size: 1.25em;
+	font-size: 0.8em;
 }
 
 ul {
@@ -28,16 +28,38 @@ li {
 
 li:hover {
 	color: #fff;
-	background-color: #F0994D;
+	background-color: #f0994d;
 }
 
 a {
-	color: #F0994D;
+	color: #f0994d;
 	text-decoration: none;
 }
 
+.nav-links {
+	font-size: 0.8em;
+	margin-top: 0.2em;
+	margin-bottom: 0.2em;
+}
+
+.weather-logo {
+	margin-left: 0;
+}
+
+.weather-copyright {
+	display: none;
+}
+
 a:visited {
-	color: #F0994D;
+	color: #f0994d;
+}
+
+span {
+	font-size: 1.2em;
+}
+
+td {
+	font-size: 0.9em;
 }
 
 .absolute {
@@ -74,12 +96,12 @@ a:visited {
 }
 
 #sidebar-outer {
-	top: -350px;
+	top: -10em;
 }
 
 #sidebar-inner {
 	overflow: scroll;
-	height: 20em;
+	height: 10em;
 }
 
 #list-item {
@@ -99,16 +121,16 @@ a:visited {
 	left: 0px;
 	bottom: 0;
 	width: 100%;
-	height: 400px;
+	height: 20em;
 	pointer-events: none;
 }
 
 #weather-container {
 
 	left: 0px;
-	bottom: -400px;
+	bottom: 20em;
 	width: 100%;
-	height: 400px;
+	height: 20em;
 
 	background: -webkit-linear-gradient(skyblue, transparent),
 	-webkit-linear-gradient(to right, #fff, transparent);
@@ -120,12 +142,12 @@ a:visited {
 	background-blend-mode: screen;
 }
 
-#weather-logo {
+.weather-logo {
 	bottom: 0px;
 	left: 50%;
 }
 
-#weather-logo img {
+.weather-logo img {
 	width: 48px;
 	height: 48px;
 	border-radius: 100%;
@@ -141,22 +163,31 @@ td {
 	border: 1px solid #bbb;
 }
 
-/* Styling rules for desktop and tablet viewports */
+@media all and (orientation: landscape) {
 
-@media screen and (min-width: 480px) {
+	.portrait-only {
+		display: none;
+	}
+}
+
+@media screen and (min-width: 330px) {
+
+	#weather-container,
+	#weather-container-outer {
+		width: 325px;
+	}
+
+	.weather-logo {
+		bottom: 0px;
+		left: 135px;
+	}
 
 	#input,
 	#list-container {
 		width: 15em;
 	}
 
-
-	#weather-container,
-	#weather-container-outer {
-		width: 30em;
-	}
-
-	#weather-logo {
+	.weather-logo {
 		bottom: 0px;
 		left: 135px;
 	}
@@ -165,9 +196,11 @@ td {
 		margin-left: 20%;
 	}
 
-	#weather-logo img {
-		width: 70px;
-		height: 70px;
+}
 
-	}
+/* Styling rules for desktop and tablet viewports */
+
+@media screen and (min-width: 800px) {
+
+
 }
