--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body,
-#map-canvas {
+.canvas {
 	height: 100%;
  	margin: 0;
    	padding: 0;
@@ -66,6 +66,10 @@ td {
 	position: absolute;
 }
 
+.relative {
+	position: relative;
+}
+
 #reset-button {
 	right: 0;
 	bottom: 0;
@@ -90,16 +94,12 @@ td {
     top: 0;
 }
 
-#sidebar-outer,
-#sidebar-inner {
+.listnav-out,
+.listnav-in {
 	width: 204px
 }
 
-#sidebar-outer {
-	top: -10em;
-}
-
-#sidebar-inner {
+.listnav-in {
 	overflow: scroll;
 	height: 10em;
 }
@@ -110,13 +110,13 @@ td {
 	padding: 0.6em;
 }
 
-#sidebar-inner,
+.listnav-in,
 #wiki-container {
     background-color: #fff;
     border-radius: 5px;
 }
 
-#weather-container-outer {
+.weather-holder-outer {
 	overflow: hidden;
 	left: 0px;
 	bottom: 0;
@@ -125,7 +125,7 @@ td {
 	pointer-events: none;
 }
 
-#weather-container {
+.weather-holder-inner {
 
 	left: 0px;
 	bottom: 20em;
@@ -163,17 +163,10 @@ td {
 	border: 1px solid #bbb;
 }
 
-@media all and (orientation: landscape) {
-
-	.portrait-only {
-		display: none;
-	}
-}
-
 @media screen and (min-width: 330px) {
 
-	#weather-container,
-	#weather-container-outer {
+	.weather-holder-inner,
+	.weather-holder-outer {
 		width: 325px;
 	}
 
@@ -198,9 +191,27 @@ td {
 
 }
 
+@media screen and (max-height: 480px) {
+
+	.weather-holder-outer,
+	.weather-holder-inner {
+		left: auto;
+		right: 0px;
+	}
+
+	.weather-logo {
+		bottom: 0px;
+		left: auto;
+		right: 135px;
+	}
+}
+
 /* Styling rules for desktop and tablet viewports */
 
 @media screen and (min-width: 800px) {
 
-
+	.listnav-out,
+	.listnav-in {
+		height: 250px;
+	}
 }
