--- a/css/style.css
+++ b/css/style.css
@@ -62,26 +62,26 @@ td {
 	position: relative;
 }
 
-#reset-button {
+.reset-btn {
 	right: 0;
 	bottom: 0;
 }
 
-#reset {
+.reset {
 	height: 3em;
 }
 
-#input {
+.input {
     width: 100%;
     height: 2.2em;
 }
 
-#arrow {
+.arrow-img {
 	left: 40%;
 	width: 3em;
 }
 
-#list-container {
+.list-holder {
     width: 100%;
     top: 0;
 }
@@ -94,18 +94,7 @@ td {
 .listnav-in {
 	overflow: scroll;
 	height: 10em;
-}
-
-#list-item {
-	border: 1px solid grey;
-	border-top: none;
-	padding: 0.6em;
-}
-
-.listnav-in,
-#wiki-container {
-    background-color: #fff;
-    border-radius: 5px;
+	background-color: #fff;
 }
 
 .weather-holder-outer {
@@ -146,14 +135,9 @@ td {
 	margin: 0 auto;
 }
 
-#weather-container * {
+.weather-holder-inner * {
 	margin-left: 5%;
 }
-
-/*td {
-	padding: 3px;
-	border: 1px solid #bbb;
-}*/
 
 @media screen and (min-width: 330px) {
 
@@ -167,8 +151,8 @@ td {
 		left: 135px;
 	}
 
-	#input,
-	#list-container {
+	.input,
+	.list-holder {
 		width: 15em;
 	}
 
@@ -177,7 +161,7 @@ td {
 		left: 135px;
 	}
 
-	#weather-container * {
+	.weather-holder-inner * {
 		margin-left: 20%;
 	}
 
